# pipe-gaps

./: .dockerignore  .flake8  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  beam-gaps-sample_messages.json  cloudbuild.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml
analysis/: 2021-2023-gaps_per_day_with_good_seg.csv  gaps_per_country-2021-2023.csv  gaps_per_day_with_good_seg2_filter.csv  gaps_per_day_with_good_seg_and_ov_short_filter.csv  gaps_per_day_without_filters.csv  plot_gaps.py  style.mplstyle
benchmarks/: core.py  measurement-size-10000000-reps-50.json
benchmarks/data/: measurement-size-10000000-reps-50.json
cloudbuild/: backend.tf  main.tf
config/: default.json  historical-backfill--2020-01-01.json  sample-2020-backfill.json  sample-backfill-2020.json  sample-backfill-25-04-07--25-04-17-min-gap-length-2.json  sample-daily.json  sample-from-bq-1-day-2-ssvids.json  sample-from-bq-1-day-30-ssvids.json  sample-from-bq-1-day.json  sample-from-bq-1-month-30-ssvids.json  sample-from-bq-1-month.json  sample-from-bq-1-year-100-ssvids.json  sample-from-bq-1-year.json  sample-from-bq-2-days.json  sample-from-db-1-day-2-ssvids-different-projects.json  sample-from-db-1-day-2-ssvids-no-side-inputs.json  sample-from-db-1-day-2-ssvids.json  sample-from-db-1-day-3-ssvids.json  sample-from-db-1-day-no-side-inputs.json  sample-from-db-1-day.json  sample-from-db-1-month-1-ssvids-open-gap.json  sample-from-db-1-month-1-ssvids.json  sample-from-db-1-month-30-ssvids.json  sample-from-db-1-month-no-side-inputs.json  sample-from-db-1-month.json  sample-from-db-1-year-100-ssvids.json  sample-from-db-1-year-no-side-inputs.json  sample-from-db-1-year.json  sample-from-db-12-years-100-ssvids-no-side-inputs.json  sample-from-db-2-years.json  sample-from-db-3-years-no-side-inputs.json  sample-from-db-3-years.json  sample-from-db-6-months-no-side-inputs.json  sample-from-db-6-months.json  sample-from-db-6-years.json  sample-from-file-1.json  sample-from-file-2.json  sample-from-file-and-db.json  sample-from-file-to-bq.json  sample-from-file-to-db.json  (+6 more)
examples/: example_beam_integration.py  example_bigquery.py  example_bq_integration.py  example_core.py  example_query_gaps.py  timestamp_benchmark.py
pipe_gaps/: benchmark.py  bq_client.py  cli.py  constants.py  log.py  pipe.py  pipe_beam.py  pipe_naive.py  queries.py  utils.py
pipe_gaps/assets/sample_data/: sample-messages-schema.json  sample_messages-two-days.json  sample_messages_lines.json
pipe_gaps/common/: benchmark.py  collections.py  datetime.py  io.py  key.py  query.py
pipe_gaps/core/: __init__.py  gap_detector.py
pipe_gaps/data/: __init__.py  open_gaps.json  sample-messages-schema.json  sample_messages-ssvid-243042594-10-days.json  sample_messages-two-days.json  sample_messages.json  sample_messages_lines.json
pipe_gaps/pipeline/: __init__.py  base.py  common.py  config.py  factory.py  main.py  pipe_beam.py  pipe_naive.py
pipe_gaps/pipeline/beam/: __init__.py
pipe_gaps/pipeline/fns/: extract_group_boundary.py
pipe_gaps/pipeline/processes/: __init__.py  base.py  common.py  detect_gaps.py  factory.py
pipe_gaps/pipeline/schemas/: __init__.py  ais-gaps.json  gap.py  message.py
pipe_gaps/queries/: __init__.py  ais_gaps.py  ais_messages.py  base.py
pipe_gaps/utils/: __init__.py  benchmark.py  collections.py  logger.py  mocks.py  timing.py
requirements/: dev.txt  prod.in
src/pipe_gaps/: version.py
src/pipe_gaps/assets/: __init__.py
src/pipe_gaps/cli/: cli.py  main.py  validations.py
src/pipe_gaps/common/: benchmark.py  dictionaries.py  inspect.py  io.py  iterables.py  jinja2.py  key.py  query.py  table_config.py  types.py
src/pipe_gaps/core/: gap_detector.py
tests/: benchmark.py  conftest.py  test_benchmark.py  test_bq_client.py  test_cli.py  test_config_files.py  test_gap_detector.py  test_log.py  test_pipe.py  test_queries.py  test_version.py
tests/cli/: test_cli.py  test_main.py  test_validations.py
tests/common/: test_benchmark.py  test_dictionaries.py  test_iterables.py  test_jinja2.py  test_key.py
tests/core/: test_gap_detector.py
tests/data/: messages.json
tests/pipeline/: test_base.py  test_config.py  test_factory.py  test_integrations.py  test_main.py  test_operation_config.py  test_pipe_beam.py  test_pipe_naive.py  test_pipeline.py  test_raw_gaps_operation_config.py  test_schemas.py  test_table_config.py
tests/queries/: test_ais_gaps.py  test_ais_messages.py  test_base.py  test_gaps.py  test_messages.py  test_raw_gaps.py
tests/utils/: test_benchmark.py  test_collections.py  test_logger.py  test_timing.py
(+129 files in other folders)
